# fasb-onboard

./: README.md  database.py  env-example  hero.py  main.py  models.py  pyproject.toml  security.py  settings.py  test_api.py  utils.py
migrations/: env.py
migrations/versions/: 03c9f373de3e_currency_table.py  068ac7125593_partner_table_and_relationships.py  0cf6413058df_account_modify_amount_field.py  182b66653f1c_project_table_and_relationship.py  5328a6790574_account_table_and_relations.py  72ab0a858369_country_and_user_tables.py  93c85635fa5e_bank_table.py
populate/: countries.py  countries_data.py  currencies.py  currencies_data.py  first_user.py
routes/: account.py  bank.py  country.py  currency,py  currency.py  partner.py  project.py  user.py
