[project]
name = "fasb-onboard-test2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.29.0",
    "uvicorn>=0.29.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
