[project]
name = "fasb-onboard-test2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabriel Martin del Campo y Eternod", email = "gmartindelcye@gmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=7.0.0",
    "pytest>=8.1.1",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 79
